Initial Change for popup

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>sidebar-v2 example</title>
+    <title>popup-sidebar example</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -31,73 +31,10 @@
     </style>
 </head>
 <body>
-    <!-- optionally define the sidebar content via HTML markup -->
-    <div id="sidebar" class="leaflet-sidebar collapsed">
-
-        <!-- nav tabs -->
-        <div class="leaflet-sidebar-tabs">
-            <!-- top aligned tabs -->
-            <ul role="tablist">
-                <li><a href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
-                <li><a href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li>
-            </ul>
-
-            <!-- bottom aligned tabs -->
-            <ul role="tablist">
-                <li><a href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li>
-            </ul>
-        </div>
-
-        <!-- panel content -->
-        <div class="leaflet-sidebar-content">
-            <div class="leaflet-sidebar-pane" id="home">
-                <h1 class="leaflet-sidebar-header">
-                    sidebar-v2
-                    <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
-                </h1>
-
-                <p>A responsive sidebar for the mapping library <a href="http://leafletjs.com/">Leaflet</a>.</p>
-                <p>Compatible with version 0.7 and 1.x (tested up to 1.2.0)</p>
-                <p><b>Select the other panes for a showcase of each feature.</b></p>
-
-                <h2>More examples</h2>
-                <ul>
-                    <li><a href="./position-right.html">Right aligned</a></li>
-                    <li><a href="./halfheight.html">The sidebar adapts to map container size</a></li>
-                    <li><a href="./leaflet-latest.html">Proof that it works with the latest leaflet version (if not, please report it!)</a></li>
-                    <li><a href="./leaflet-0.7.html">Proof that it works with leaflet 0.7</a></li>
-                </ul>
-
-                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </div>
-
-            <div class="leaflet-sidebar-pane" id="autopan">
-                <h1 class="leaflet-sidebar-header">
-                    autopan
-                    <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
-                </h1>
-                <p>
-                    <code>Leaflet.control.sidebar({ autopan: true })</code>
-                    makes shure that the map center always stays visible.
-                </p>
-                <p>
-                    The autopan behviour is responsive as well.
-                    Try opening and closing the sidebar from this pane!
-                </p>
-            </div>
-
-            <div class="leaflet-sidebar-pane" id="messages">
-                <h1 class="leaflet-sidebar-header">Messages<span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
-            </div>
-        </div>
-    </div>
-
+   
     <div id="map"></div>
 
-    <a href="https://github.com/nickpeihl/leaflet-sidebar-v2/"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1000;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/boldtrn/leaflet-popup-sidebar"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1000;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
         integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
@@ -112,50 +49,44 @@
             maxZoom: 18,
             attribution: 'Map data &copy; OpenStreetMap contributors'
         }).addTo(map);
-        L.marker([51.2, 7]).addTo(map);
+        var marker = L.marker([51.2, 7]);
+        marker.addTo(map);
+        var counter = 0;
+        marker.on('click', function(e){
+            var sidebar = L.control.sidebar({ container: 'sidebar', position: 'right', }).addTo(map);
 
-        // create the sidebar instance and add it to the map
-        var sidebar = L.control.sidebar({ container: 'sidebar' })
-            .addTo(map)
-            .open('home');
+            counter++;
 
-        // add panels dynamically to the sidebar
-        sidebar
-            .addPanel({
-                id:   'js-api',
-                tab:  '<i class="fa fa-gear"></i>',
-                title: 'JS API',
-                pane: '<p>The Javascript API allows to dynamically create or modify the panel state.<p/><p><button onclick="sidebar.enablePanel(\'mail\')">enable mails panel</button><button onclick="sidebar.disablePanel(\'mail\')">disable mails panel</button></p><p><button onclick="addUser()">add user</button></b>',
-            })
-            // add a tab with a click callback, initially disabled
-            .addPanel({
-                id:   'mail',
-                tab:  '<i class="fa fa-envelope"></i>',
-                title: 'Messages',
-                button: function() { alert('opened via JS callback') },
-                disabled: true,
-            })
+            var newDiv = document.createElement("div"); 
+            newDiv.className = "leaflet-sidebar-pane";
+            var header = document.createElement("h1");
+            header.className = "leaflet-sidebar-header";
+            newDiv.appendChild(header);
+            header.innerHTML = 'Header <span class="leaflet-sidebar-close"><i class="fa fa-times"></i></span>';
+            newDiv.appendChild(document.createTextNode("Click "+counter));
 
-        // be notified when a panel is opened
-        sidebar.on('content', function (ev) {
-            switch (ev.id) {
-                case 'autopan':
-                sidebar.options.autopan = true;
-                break;
-                default:
-                sidebar.options.autopan = false;
-            }
+            var panelContent = {
+                id: 'content',                     // UID, used to access the panel
+                tab: '<i class="fa fa-info"></i>',  // content can be passed as HTML string,
+                //pane: "Click "+ counter,            // DOM elements can be passed, too
+                pane: newDiv,            // DOM elements can be passed, too
+                title: 'Info '+counter,     // an optional pane header
+                position: 'top'                     // optional vertical alignment, defaults to 'top'
+            };
+            sidebar.addPanel(panelContent);
+
+            var panelContent = {
+                id: 'question',                     // UID, used to access the panel
+                tab: '<i class="fa fa-question"></i>',  // content can be passed as HTML string,
+                pane: "I have "+ counter+ " unawnsered questions :(",            // DOM elements can be passed, too
+                title: 'Info '+counter,     // an optional pane header
+                position: 'bottom'                     // optional vertical alignment, defaults to 'top'
+            };
+            sidebar.addPanel(panelContent);
+
+            sidebar.open('content');
         });
 
-        var userid = 0
-        function addUser() {
-            sidebar.addPanel({
-                id:   'user' + userid++,
-                tab:  '<i class="fa fa-user"></i>',
-                title: 'User Profile ' + userid,
-                pane: '<p>user ipsum dolor sit amet</p>',
-            });
-        }
     </script>
 </body>
 </html>
